@@ -1,9 +1,19 @@
 language: python
 python:
     - 2.7
+    - 3.7
 install:
-    - pip install .
+    - pip install zc.buildout
+    - buildout bootstrap
+    - buildout install test
 script:
-    - python setup.py test -q
+    - bin/test -v1
 notifications:
     email: false
+cache:
+  pip: true
+  directories:
+    - eggs/
+jobs:
+  allow_failures:
+  - python: 3.7
