@@ -5,7 +5,8 @@ Change History
 Unreleased
 ----------
 
-- Use new Python 2.6/3.x compatible exception syntax.
+- Use new Python 2.6/3.x compatible exception syntax. (This does not mean that
+  this package is already Python 3 compatible.)
 
 
 0.3.1 (2012-04-27)
